- https://github.com/eclipse-syson/syson/issues/155[#155] [syson] Forbid composite usages inside AttributeDefinition/AttributeUsage.
- https://github.com/eclipse-syson/syson/issues/154[#154] [diagrams] Add missing node tools inside existing usage elements.
- https://github.com/eclipse-syson/syson/issues/163[#163] [diagrams] Add missing composite edges between usage and compartment content

=== New features

- https://github.com/eclipse-syson/syson/issues/147[#147] [general-view] Refactor compartments of `RequirementDefinition` and `RequirementUsage` to better fit the specification and examples.

== v2024.3.0

=== Breaking changes

- Refactor Node Descriptions Providers in General View: all Definitions and Usages Node Descriptions Providers (e.g. `PartDefinitionNodeDescriptionProvider` or `ItemUsageNodeDescriptionProvider`) have been replaced by two new Node Descriptions Providers: `DefinitionNodeDescriptionProvider` and `UsageNodeDescriptionProvider`.
- Switch to Sirius Web 2024.3.0: `GeneralViewRegistryConfigurer` has been renamed to `GeneralViewDescriptionProvider` as it now implements `IEditingContextRepresentationDescriptionProvider` instead of `IRepresentationDescriptionRegistryConfigurer`. Same for `InterconnectionViewRegistryConfigurer`.
`SysMLv2ObjectService` has been renamed into `SysMLv2LabelService` as it now implements `ILabelServiceDelegate` instead of `IObjectServiceDelegate`.
- https://github.com/eclipse-syson/syson/issues/93[#93] [diagrams] Refactor diagrams code with creation of the diagram-common-view module to gather all cross diagram tools:
  * `DescriptionNameGenerator` is no longer a static class with static methods.
  There should be one name generator per diagram owning the diagram prefix used to prefix all descriptions for this diagram (for instance `GVDescriptionNameGenerator`)

=== Dependency update
