@@ -20,6 +20,7 @@ import org.eclipse.sirius.components.view.builder.providers.IColorProvider;
 import org.eclipse.sirius.components.view.diagram.NodeDescription;
 import org.eclipse.syson.diagram.common.view.edges.AbstractSubclassificationEdgeDescriptionProvider;
 import org.eclipse.syson.diagram.general.view.GVDescriptionNameGenerator;
+import org.eclipse.syson.diagram.general.view.GeneralViewDiagramDescriptionProvider;
 import org.eclipse.syson.sysml.Subclassification;
 import org.eclipse.syson.sysml.SysmlPackage;
 
@@ -43,16 +44,10 @@ public class SubclassificationEdgeDescriptionProvider extends AbstractSubclassif
         var nameGenerator = new GVDescriptionNameGenerator();
         var sourcesAndTargets = new ArrayList<NodeDescription>();
 
-        cache.getNodeDescription(nameGenerator.getNodeName(SysmlPackage.eINSTANCE.getActionDefinition())).ifPresent(sourcesAndTargets::add);
-        cache.getNodeDescription(nameGenerator.getNodeName(SysmlPackage.eINSTANCE.getAttributeDefinition())).ifPresent(sourcesAndTargets::add);
-        cache.getNodeDescription(nameGenerator.getNodeName(SysmlPackage.eINSTANCE.getConstraintDefinition())).ifPresent(sourcesAndTargets::add);
-        cache.getNodeDescription(nameGenerator.getNodeName(SysmlPackage.eINSTANCE.getEnumerationDefinition())).ifPresent(sourcesAndTargets::add);
-        cache.getNodeDescription(nameGenerator.getNodeName(SysmlPackage.eINSTANCE.getInterfaceDefinition())).ifPresent(sourcesAndTargets::add);
-        cache.getNodeDescription(nameGenerator.getNodeName(SysmlPackage.eINSTANCE.getItemDefinition())).ifPresent(sourcesAndTargets::add);
-        cache.getNodeDescription(nameGenerator.getNodeName(SysmlPackage.eINSTANCE.getMetadataDefinition())).ifPresent(sourcesAndTargets::add);
+        GeneralViewDiagramDescriptionProvider.DEFINITIONS.forEach(definition -> {
+            cache.getNodeDescription(nameGenerator.getNodeName(definition)).ifPresent(sourcesAndTargets::add);
+        });
         cache.getNodeDescription(nameGenerator.getNodeName(SysmlPackage.eINSTANCE.getPackage())).ifPresent(sourcesAndTargets::add);
-        cache.getNodeDescription(nameGenerator.getNodeName(SysmlPackage.eINSTANCE.getPartDefinition())).ifPresent(sourcesAndTargets::add);
-        cache.getNodeDescription(nameGenerator.getNodeName(SysmlPackage.eINSTANCE.getPortDefinition())).ifPresent(sourcesAndTargets::add);
 
         return sourcesAndTargets;
     }
